--- a/INSTALL.html
+++ b/INSTALL.html
@@ -104,7 +104,7 @@
 
         <div class="important">
             <strong>⚡ Quick Install for Opera GX</strong><br>
-            Extension folder location: <code>D:\Projects\LawHub\HighlightAssist</code>
+            Extension folder location: <code>[Your HighlightAssist directory]</code>
         </div>
 
         <h2>📦 Installation Steps</h2>
@@ -126,7 +126,7 @@
             <span class="step-number">3</span>
             <strong>Load the Extension</strong><br>
             Click "Load unpacked extension" button<br>
-            Navigate to: <code>D:\Projects\LawHub\LawFirmProject\browser-extension</code><br>
+            Navigate to your HighlightAssist directory<br>
             Click "Select Folder"
         </div>
 
@@ -237,7 +237,7 @@
         </div>
 
         <a href="https://github.com/Skullcandyxxx/HighlightAssist" class="btn">View on GitHub</a>
-        <a href="file:///D:/Projects/LawHub/HighlightAssist/README.md" class="btn">Full Documentation</a>
+        <a href="https://github.com/Skullcandyxxx/HighlightAssist/blob/main/README.md" class="btn">Full Documentation</a>
     </div>
 </body>
 </html>
