--- a/popup.html
+++ b/popup.html
@@ -257,7 +257,7 @@
     </div>
 
     <div class="footer">
-        Made with ❤️ by <a href="https://github.com/Skullcandyxxx" target="_blank">LawHub</a>
+        Made with ❤️ by <a href="https://github.com/Skullcandyxxx" target="_blank">Skullcandyxxx</a>
     </div>
 
     <script src="popup.js"></script>
