--- a/INSTALL.html
+++ b/INSTALL.html
@@ -19,6 +19,20 @@
             padding: 40px;
             box-shadow: 0 20px 60px rgba(0,0,0,0.3);
         }
+        .header {
+            text-align: center;
+            margin-bottom: 40px;
+        }
+        .logo {
+            width: 80px;
+            height: 80px;
+            margin: 0 auto 20px;
+        }
+        .logo img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+        }
         h1 {
             color: #1e293b;
             font-size: 36px;
@@ -99,8 +113,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>🎯 Highlight Assist</h1>
-        <div class="tagline">Professional Visual UI Debugger for Developers</div>
+        <div class="header">
+            <div class="logo">
+                <img src="icons/icon128.png" alt="Highlight Assist Logo">
+            </div>
+            <h1>🎯 Highlight Assist</h1>
+            <div class="tagline">Visual UI Debugger - Installation Guide</div>
+        </div>
 
         <div class="important">
             <strong>⚡ Quick Install for Opera GX</strong><br>
