--- a/popup.html
+++ b/popup.html
@@ -15,22 +15,23 @@
             padding: 0;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            overflow: hidden;
         }
         .header {
             background: rgba(255, 255, 255, 0.95);
-            padding: 20px;
+            padding: 16px 20px;
             border-bottom: 1px solid rgba(0,0,0,0.1);
         }
         .logo {
             display: flex;
             align-items: center;
-            gap: 12px;
-            margin-bottom: 8px;
+            gap: 10px;
+            margin-bottom: 4px;
         }
         .logo-icon {
-            width: 40px;
-            height: 40px;
-            border-radius: 10px;
+            width: 36px;
+            height: 36px;
+            border-radius: 8px;
         }
         .logo-icon img {
             width: 100%;
@@ -38,39 +39,54 @@
             object-fit: contain;
         }
         h1 {
-            font-size: 18px;
+            font-size: 16px;
             font-weight: 700;
             color: #1e293b;
         }
         .tagline {
-            font-size: 12px;
+            font-size: 11px;
             color: #64748b;
-            margin-top: 4px;
+            margin-top: 2px;
         }
         .content {
-            padding: 20px;
+            padding: 16px 20px;
             background: rgba(255, 255, 255, 0.98);
+            max-height: 480px;
+            overflow-y: auto;
+        }
+        .content::-webkit-scrollbar {
+            width: 6px;
+        }
+        .content::-webkit-scrollbar-track {
+            background: #f1f5f9;
+        }
+        .content::-webkit-scrollbar-thumb {
+            background: #cbd5e1;
+            border-radius: 3px;
+        }
+        .content::-webkit-scrollbar-thumb:hover {
+            background: #94a3b8;
         }
         .status-card {
-            padding: 16px;
-            border-radius: 12px;
-            margin-bottom: 16px;
-            font-size: 14px;
+            padding: 14px;
+            border-radius: 10px;
+            margin-bottom: 14px;
+            font-size: 13px;
             font-weight: 500;
             display: flex;
             flex-direction: column;
-            gap: 8px;
+            gap: 6px;
             transition: all 0.3s ease;
         }
         .status-card > div:first-child {
             display: flex;
             align-items: center;
-            gap: 12px;
+            gap: 10px;
         }
         .status-icon {
-            font-size: 20px;
-            width: 32px;
-            height: 32px;
+            font-size: 18px;
+            width: 28px;
+            height: 28px;
             border-radius: 50%;
             display: flex;
             align-items: center;
@@ -95,21 +111,21 @@
         .btn-group {
             display: flex;
             flex-direction: column;
-            gap: 10px;
-            margin-bottom: 16px;
+            gap: 8px;
+            margin-bottom: 14px;
         }
         button {
-            padding: 14px 20px;
+            padding: 11px 16px;
             border: none;
-            border-radius: 10px;
-            font-size: 14px;
+            border-radius: 8px;
+            font-size: 13px;
             font-weight: 600;
             cursor: pointer;
             transition: all 0.2s ease;
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 8px;
+            gap: 6px;
         }
         button:active {
             transform: scale(0.98);
@@ -117,55 +133,55 @@
         .btn-primary {
             background: linear-gradient(135deg, #3b82f6 0%, #2563eb 100%);
             color: white;
-            box-shadow: 0 4px 12px rgba(59, 130, 246, 0.3);
+            box-shadow: 0 3px 10px rgba(59, 130, 246, 0.3);
         }
         .btn-primary:hover {
-            box-shadow: 0 6px 16px rgba(59, 130, 246, 0.4);
+            box-shadow: 0 4px 14px rgba(59, 130, 246, 0.4);
         }
         .btn-danger {
             background: linear-gradient(135deg, #ef4444 0%, #dc2626 100%);
             color: white;
-            box-shadow: 0 4px 12px rgba(239, 68, 68, 0.3);
+            box-shadow: 0 3px 10px rgba(239, 68, 68, 0.3);
         }
         .btn-danger:hover {
-            box-shadow: 0 6px 16px rgba(239, 68, 68, 0.4);
+            box-shadow: 0 4px 14px rgba(239, 68, 68, 0.4);
         }
         .btn-secondary {
             background: linear-gradient(135deg, #8b5cf6 0%, #7c3aed 100%);
             color: white;
-            box-shadow: 0 4px 12px rgba(139, 92, 246, 0.3);
+            box-shadow: 0 3px 10px rgba(139, 92, 246, 0.3);
         }
         .btn-secondary:hover {
-            box-shadow: 0 6px 16px rgba(139, 92, 246, 0.4);
+            box-shadow: 0 4px 14px rgba(139, 92, 246, 0.4);
         }
         .info-box {
             background: linear-gradient(135deg, #f8fafc 0%, #f1f5f9 100%);
             border: 1px solid #e2e8f0;
-            border-radius: 10px;
-            padding: 14px;
-            margin-bottom: 16px;
+            border-radius: 8px;
+            padding: 12px;
+            margin-bottom: 14px;
         }
         .info-title {
-            font-size: 13px;
+            font-size: 12px;
             font-weight: 600;
             color: #1e293b;
-            margin-bottom: 8px;
+            margin-bottom: 6px;
             display: flex;
             align-items: center;
-            gap: 6px;
+            gap: 5px;
         }
         .info-list {
-            font-size: 12px;
+            font-size: 11px;
             color: #475569;
-            line-height: 1.6;
+            line-height: 1.5;
             padding-left: 0;
             list-style: none;
         }
         .info-list li {
-            padding: 4px 0;
+            padding: 3px 0;
             display: flex;
             align-items: flex-start;
-            gap: 8px;
+            gap: 6px;
         }
         .info-list li:before {
             content: "✓";
@@ -176,34 +192,280 @@
         .shortcut {
             background: #fff;
             border: 1px solid #e2e8f0;
-            padding: 10px;
-            border-radius: 8px;
-            font-size: 11px;
+            padding: 8px;
+            border-radius: 6px;
+            font-size: 10px;
             text-align: center;
             color: #64748b;
-            margin-top: 12px;
+            margin-top: 10px;
         }
         .shortcut kbd {
             background: #f1f5f9;
-            padding: 3px 7px;
-            border-radius: 4px;
+            padding: 2px 6px;
+            border-radius: 3px;
             border: 1px solid #cbd5e1;
             font-family: monospace;
-            font-size: 11px;
+            font-size: 10px;
             color: #1e293b;
         }
         .footer {
-            padding: 16px 20px;
+            padding: 12px 20px;
             background: rgba(255, 255, 255, 0.95);
             border-top: 1px solid rgba(0,0,0,0.05);
             text-align: center;
-            font-size: 11px;
+            font-size: 10px;
             color: #94a3b8;
         }
         .footer a {
             color: #3b82f6;
             text-decoration: none;
             font-weight: 500;
+        }
+        
+        /* Daemon Status Badge */
+        .daemon-badge {
+            margin-bottom: 14px;
+            padding: 10px 12px;
+            border-radius: 8px;
+            background: linear-gradient(135deg, #f1f5f9 0%, #e2e8f0 100%);
+            border: 1px solid #cbd5e1;
+            transition: all 0.3s ease;
+        }
+        .daemon-badge.connected {
+            background: linear-gradient(135deg, #d1fae5 0%, #a7f3d0 100%);
+            border-color: #6ee7b7;
+        }
+        .daemon-badge.disconnected {
+            background: linear-gradient(135deg, #fee2e2 0%, #fecaca 100%);
+            border-color: #fca5a5;
+        }
+        .daemon-badge-content {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+        .daemon-icon {
+            font-size: 20px;
+            width: 32px;
+            height: 32px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: white;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+        .daemon-text {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            gap: 2px;
+        }
+        .daemon-label {
+            font-size: 10px;
+            font-weight: 600;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+            color: #64748b;
+        }
+        .daemon-badge.connected .daemon-label {
+            color: #047857;
+        }
+        .daemon-badge.disconnected .daemon-label {
+            color: #991b1b;
+        }
+        .daemon-state {
+            font-size: 12px;
+            font-weight: 600;
+            color: #1e293b;
+        }
+        .daemon-badge.connected .daemon-state {
+            color: #059669;
+        }
+        .daemon-badge.disconnected .daemon-state {
+            color: #dc2626;
+        }
+        
+        /* Custom Modal Dialog Styles */
+        .modal-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: rgba(0, 0, 0, 0.5);
+            backdrop-filter: blur(4px);
+            display: none;
+            align-items: center;
+            justify-content: center;
+            z-index: 10000;
+            animation: fadeIn 0.2s ease;
+        }
+        .modal-overlay.active {
+            display: flex;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+        .modal-dialog {
+            background: white;
+            border-radius: 16px;
+            padding: 20px;
+            width: 90%;
+            max-width: 380px;
+            max-height: 80vh;
+            overflow-y: auto;
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
+            animation: slideUp 0.3s ease;
+        }
+        .modal-dialog::-webkit-scrollbar {
+            width: 6px;
+        }
+        .modal-dialog::-webkit-scrollbar-track {
+            background: #f1f5f9;
+            border-radius: 3px;
+        }
+        .modal-dialog::-webkit-scrollbar-thumb {
+            background: #cbd5e1;
+            border-radius: 3px;
+        }
+        .modal-dialog::-webkit-scrollbar-thumb:hover {
+            background: #94a3b8;
+        }
+        @keyframes slideUp {
+            from { 
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to { 
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+        .modal-header {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            margin-bottom: 14px;
+            padding-bottom: 14px;
+            border-bottom: 2px solid #f1f5f9;
+        }
+        .modal-icon {
+            width: 36px;
+            height: 36px;
+            border-radius: 8px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 18px;
+            background: linear-gradient(135deg, #8b5cf6 0%, #7c3aed 100%);
+        }
+        .modal-title {
+            font-size: 16px;
+            font-weight: 700;
+            color: #1e293b;
+        }
+        .modal-body {
+            margin-bottom: 16px;
+        }
+        .modal-subtitle {
+            font-size: 13px;
+            color: #64748b;
+            margin-bottom: 10px;
+        }
+        .modal-list {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            max-height: 300px;
+            overflow-y: auto;
+        }
+        .modal-list::-webkit-scrollbar {
+            width: 6px;
+        }
+        .modal-list::-webkit-scrollbar-track {
+            background: #f1f5f9;
+            border-radius: 3px;
+        }
+        .modal-list::-webkit-scrollbar-thumb {
+            background: #cbd5e1;
+            border-radius: 3px;
+        }
+        .modal-list-item {
+            padding: 10px;
+            margin: 5px 0;
+            background: linear-gradient(135deg, #f8fafc 0%, #f1f5f9 100%);
+            border: 2px solid #e2e8f0;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: all 0.2s ease;
+            font-size: 13px;
+            color: #1e293b;
+        }
+        .modal-list-item:hover {
+            background: linear-gradient(135deg, #ddd6fe 0%, #c4b5fd 100%);
+            border-color: #a78bfa;
+            transform: translateY(-1px);
+            box-shadow: 0 3px 10px rgba(139, 92, 246, 0.2);
+        }
+        .modal-list-item strong {
+            color: #8b5cf6;
+        }
+        .modal-input {
+            width: 100%;
+            padding: 10px 14px;
+            border: 2px solid #e2e8f0;
+            border-radius: 8px;
+            font-size: 13px;
+            font-family: inherit;
+            transition: all 0.2s ease;
+            margin-top: 6px;
+        }
+        .modal-input:focus {
+            outline: none;
+            border-color: #8b5cf6;
+            box-shadow: 0 0 0 3px rgba(139, 92, 246, 0.1);
+        }
+        .modal-footer {
+            display: flex;
+            gap: 8px;
+            justify-content: flex-end;
+        }
+        .modal-btn {
+            padding: 9px 18px;
+            border: none;
+            border-radius: 7px;
+            font-size: 13px;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.2s ease;
+        }
+        .modal-btn-primary {
+            background: linear-gradient(135deg, #8b5cf6 0%, #7c3aed 100%);
+            color: white;
+            box-shadow: 0 3px 10px rgba(139, 92, 246, 0.3);
+        }
+        .modal-btn-primary:hover {
+            transform: translateY(-1px);
+            box-shadow: 0 4px 14px rgba(139, 92, 246, 0.4);
+        }
+        .modal-btn-secondary {
+            background: #f1f5f9;
+            color: #64748b;
+        }
+        .modal-btn-secondary:hover {
+            background: #e2e8f0;
+        }
+        .modal-info {
+            background: linear-gradient(135deg, #dbeafe 0%, #bfdbfe 100%);
+            border: 2px solid #93c5fd;
+            border-radius: 8px;
+            padding: 10px;
+            margin-top: 10px;
+            font-size: 11px;
+            color: #1e40af;
+            line-height: 1.5;
         }
     </style>
 </head>
@@ -224,6 +486,17 @@
         <div id="status" class="status-card inactive">
             <div class="status-icon">⚫</div>
             <div>Tool is Inactive</div>
+        </div>
+
+        <!-- Daemon Status Badge -->
+        <div id="daemonStatus" class="daemon-badge" style="display: none;">
+            <div class="daemon-badge-content">
+                <span id="daemonIcon" class="daemon-icon">🔌</span>
+                <div class="daemon-text">
+                    <div id="daemonLabel" class="daemon-label">Daemon Status</div>
+                    <div id="daemonState" class="daemon-state">Checking...</div>
+                </div>
+            </div>
         </div>
 
         <div class="btn-group">
@@ -260,6 +533,22 @@
 
     <div class="footer">
         Made with ❤️ by <a href="https://github.com/Skullcandyxxx" target="_blank">Skullcandyxxx</a>
+    </div>
+
+    <!-- Custom Modal Dialog -->
+    <div id="customModal" class="modal-overlay">
+        <div class="modal-dialog">
+            <div class="modal-header">
+                <div class="modal-icon" id="modalIcon">🚀</div>
+                <div class="modal-title" id="modalTitle">Dialog</div>
+            </div>
+            <div class="modal-body" id="modalBody">
+                <!-- Dynamic content -->
+            </div>
+            <div class="modal-footer" id="modalFooter">
+                <!-- Dynamic buttons -->
+            </div>
+        </div>
     </div>
 
     <script src="popup.js"></script>
