--- a/popup.html
+++ b/popup.html
@@ -286,6 +286,137 @@
             color: #dc2626;
         }
         
+        /* Server Management Section */
+        .server-management {
+            margin-bottom: 14px;
+            background: white;
+            border: 2px solid #e2e8f0;
+            border-radius: 10px;
+            overflow: hidden;
+        }
+        .server-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 12px 14px;
+            background: linear-gradient(135deg, #f8fafc 0%, #f1f5f9 100%);
+            cursor: pointer;
+            transition: background 0.2s;
+        }
+        .server-header:hover {
+            background: linear-gradient(135deg, #f1f5f9 0%, #e2e8f0 100%);
+        }
+        .server-count {
+            background: linear-gradient(135deg, #8b5cf6 0%, #7c3aed 100%);
+            color: white;
+            font-size: 10px;
+            padding: 2px 8px;
+            border-radius: 12px;
+            font-weight: 700;
+        }
+        .toggle-btn {
+            background: none;
+            border: none;
+            font-size: 12px;
+            cursor: pointer;
+            padding: 4px 8px;
+            color: #64748b;
+            transition: transform 0.2s;
+        }
+        .toggle-btn.expanded {
+            transform: rotate(180deg);
+        }
+        .server-list {
+            max-height: 0;
+            overflow: hidden;
+            transition: max-height 0.3s ease;
+        }
+        .server-list.expanded {
+            max-height: 400px;
+            overflow-y: auto;
+        }
+        .server-empty {
+            padding: 20px;
+            text-align: center;
+            color: #94a3b8;
+            font-size: 12px;
+        }
+        .server-item {
+            padding: 12px 14px;
+            border-top: 1px solid #f1f5f9;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            gap: 10px;
+        }
+        .server-item:hover {
+            background: #f8fafc;
+        }
+        .server-info {
+            flex: 1;
+            min-width: 0;
+        }
+        .server-name {
+            font-weight: 600;
+            font-size: 12px;
+            color: #1e293b;
+            display: flex;
+            align-items: center;
+            gap: 6px;
+        }
+        .server-status {
+            font-size: 8px;
+            padding: 2px 6px;
+            border-radius: 8px;
+            font-weight: 600;
+            text-transform: uppercase;
+        }
+        .server-status.running {
+            background: #d1fae5;
+            color: #047857;
+        }
+        .server-details {
+            font-size: 10px;
+            color: #64748b;
+            margin-top: 4px;
+            display: flex;
+            gap: 12px;
+        }
+        .server-actions {
+            display: flex;
+            gap: 6px;
+        }
+        .server-btn {
+            padding: 6px 10px;
+            border: none;
+            border-radius: 6px;
+            font-size: 10px;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.2s;
+        }
+        .server-btn-stop {
+            background: linear-gradient(135deg, #fee2e2 0%, #fecaca 100%);
+            color: #991b1b;
+        }
+        .server-btn-stop:hover {
+            background: linear-gradient(135deg, #fecaca 0%, #fca5a5 100%);
+        }
+        .server-btn-restart {
+            background: linear-gradient(135deg, #dbeafe 0%, #bfdbfe 100%);
+            color: #1e40af;
+        }
+        .server-btn-restart:hover {
+            background: linear-gradient(135deg, #bfdbfe 0%, #93c5fd 100%);
+        }
+        .server-btn-view {
+            background: linear-gradient(135deg, #8b5cf6 0%, #7c3aed 100%);
+            color: white;
+        }
+        .server-btn-view:hover {
+            background: linear-gradient(135deg, #7c3aed 0%, #6d28d9 100%);
+        }
+        
         /* Custom Modal Dialog Styles */
         .modal-overlay {
             position: fixed;
@@ -512,6 +643,21 @@
             <button id="settingsBtn" class="btn-secondary">
                 <span>⚙️</span> Settings & Preferences
             </button>
+        </div>
+
+        <!-- Server Management Section -->
+        <div id="serverManagement" class="server-management" style="display: none;">
+            <div class="server-header" id="serverHeader">
+                <div style="display: flex; align-items: center; gap: 8px;">
+                    <span style="font-size: 16px;">🖥️</span>
+                    <span style="font-weight: 600;">Running Servers</span>
+                    <span id="serverCount" class="server-count">0</span>
+                </div>
+                <button id="toggleServers" class="toggle-btn">▼</button>
+            </div>
+            <div id="serverList" class="server-list">
+                <div class="server-empty">No servers running</div>
+            </div>
         </div>
 
         <div class="info-box">
