--- a/popup.html
+++ b/popup.html
@@ -230,6 +230,17 @@
             background: linear-gradient(135deg, #f1f5f9 0%, #e2e8f0 100%);
             border: 1px solid #cbd5e1;
             transition: all 0.3s ease;
+            animation: fadeInDown 0.5s ease-out;
+        }
+        @keyframes fadeInDown {
+            from {
+                opacity: 0;
+                transform: translateY(-10px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
         .daemon-badge.connected {
             background: linear-gradient(135deg, #d1fae5 0%, #a7f3d0 100%);
@@ -254,6 +265,37 @@
             justify-content: center;
             background: white;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            transition: all 0.3s ease;
+        }
+        .daemon-badge.connected .daemon-icon {
+            animation: pulse-success 2s ease-in-out infinite;
+            box-shadow: 0 0 0 0 rgba(16, 185, 129, 0.7);
+        }
+        .daemon-badge.disconnected .daemon-icon {
+            animation: pulse-error 2s ease-in-out infinite;
+            box-shadow: 0 0 0 0 rgba(239, 68, 68, 0.7);
+        }
+        @keyframes pulse-success {
+            0% {
+                box-shadow: 0 0 0 0 rgba(16, 185, 129, 0.7);
+            }
+            50% {
+                box-shadow: 0 0 0 8px rgba(16, 185, 129, 0);
+            }
+            100% {
+                box-shadow: 0 0 0 0 rgba(16, 185, 129, 0);
+            }
+        }
+        @keyframes pulse-error {
+            0% {
+                box-shadow: 0 0 0 0 rgba(239, 68, 68, 0.7);
+            }
+            50% {
+                box-shadow: 0 0 0 8px rgba(239, 68, 68, 0);
+            }
+            100% {
+                box-shadow: 0 0 0 0 rgba(239, 68, 68, 0);
+            }
         }
         .daemon-text {
             flex: 1;
@@ -267,6 +309,7 @@
             text-transform: uppercase;
             letter-spacing: 0.5px;
             color: #64748b;
+            transition: all 0.3s ease;
         }
         .daemon-badge.connected .daemon-label {
             color: #047857;
@@ -278,12 +321,24 @@
             font-size: 12px;
             font-weight: 600;
             color: #1e293b;
+            transition: all 0.3s ease;
         }
         .daemon-badge.connected .daemon-state {
             color: #059669;
         }
         .daemon-badge.disconnected .daemon-state {
             color: #dc2626;
+        }
+        .daemon-state.checking {
+            animation: shimmer 1.5s ease-in-out infinite;
+        }
+        @keyframes shimmer {
+            0%, 100% {
+                opacity: 1;
+            }
+            50% {
+                opacity: 0.4;
+            }
         }
         
         /* Pulse animation for daemon status */
@@ -310,12 +365,26 @@
             font-size: 9px;
             font-weight: 600;
             color: #64748b;
+            transition: all 0.3s ease;
+            animation: slideInRight 0.5s ease-out;
+        }
+        @keyframes slideInRight {
+            from {
+                opacity: 0;
+                transform: translateX(10px);
+            }
+            to {
+                opacity: 1;
+                transform: translateX(0);
+            }
         }
         .daemon-badge.connected .os-badge {
             color: #047857;
+            background: rgba(16, 185, 129, 0.15);
         }
         .daemon-badge.disconnected .os-badge {
             color: #991b1b;
+            background: rgba(239, 68, 68, 0.15);
         }
         
         /* Server Management Section */
