Add smart localhost detection with user-friendly UI
Major improvements:
-  New 'Start New Server' button (shows when daemon connected)
-  Auto-scans running localhost servers (ports 3000-9000)
-  OS-specific folder browsing instructions
-  Recent projects dropdown (remembers last 10)
-  One-click to open detected servers
-  Auto-saves projects to recents
-  Cross-platform support (Windows/macOS/Linux)

User workflow simplified:
1. Install daemon (one-time)
2. Click 'Start New Server'
3. See detected running servers OR select recent project OR browse new folder
4. Extension auto-detects dev command
5. Server starts - done!

No more manual framework selection or complex setup!

--- a/popup.html
+++ b/popup.html
@@ -734,6 +734,13 @@
             </div>
         </div>
 
+        <!-- Start New Server Button (shows when daemon connected) -->
+        <div id="startServerSection" style="display: none; margin-bottom: 16px;">
+            <button id="startNewServerBtn" style="width: 100%; padding: 12px; background: linear-gradient(135deg, #10b981 0%, #059669 100%); color: white; border: none; border-radius: 10px; font-size: 14px; font-weight: 600; cursor: pointer; transition: all 0.3s ease; box-shadow: 0 4px 12px rgba(16, 185, 129, 0.3);">
+                <span style="font-size: 16px;">✨</span> Start New Server
+            </button>
+        </div>
+
         <div class="btn-group">
             <button id="toggleBtn" class="btn-primary">
                 <span>🚀</span> Enable Highlight Tool
