--- a/popup-v2.html
+++ b/popup-v2.html
@@ -355,6 +355,112 @@
             font-family: monospace;
             font-size: 10px;
         }
+
+        /* Installation Section */
+        .install-card {
+            background: white;
+            border: 1px solid #e2e8f0;
+            border-radius: 12px;
+            padding: 16px;
+        }
+
+        .install-header {
+            display: flex;
+            gap: 12px;
+            align-items: flex-start;
+            margin-bottom: 16px;
+            padding-bottom: 16px;
+            border-bottom: 1px solid #f1f5f9;
+        }
+
+        .install-icon {
+            width: 40px;
+            height: 40px;
+            background: linear-gradient(135deg, #fbbf24 0%, #f59e0b 100%);
+            border-radius: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 20px;
+            flex-shrink: 0;
+        }
+
+        .install-header h3 {
+            font-size: 14px;
+            font-weight: 600;
+            margin-bottom: 4px;
+            color: #1e293b;
+        }
+
+        .install-header p {
+            font-size: 12px;
+            color: #64748b;
+        }
+
+        .install-steps {
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
+            margin-bottom: 16px;
+        }
+
+        .install-step {
+            display: flex;
+            gap: 12px;
+            align-items: flex-start;
+        }
+
+        .step-number {
+            width: 24px;
+            height: 24px;
+            background: linear-gradient(135deg, #8b5cf6 0%, #7c3aed 100%);
+            color: white;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 12px;
+            font-weight: 600;
+            flex-shrink: 0;
+        }
+
+        .step-content {
+            flex: 1;
+        }
+
+        .step-content strong {
+            display: block;
+            font-size: 13px;
+            font-weight: 600;
+            margin-bottom: 4px;
+            color: #1e293b;
+        }
+
+        .step-content p {
+            font-size: 12px;
+            color: #64748b;
+            margin-bottom: 8px;
+        }
+
+        .btn-sm {
+            padding: 6px 12px;
+            font-size: 12px;
+            height: auto;
+        }
+
+        .install-note {
+            background: #fef3c7;
+            border: 1px solid #fde047;
+            border-radius: 8px;
+            padding: 12px;
+            font-size: 12px;
+            color: #78350f;
+            line-height: 1.5;
+        }
+
+        .install-note strong {
+            font-weight: 600;
+        }
     </style>
 </head>
 <body>
@@ -422,6 +528,52 @@
                 <button class="btn btn-secondary" id="settingsBtn">
                     ⚙️ Settings
                 </button>
+            </div>
+        </div>
+
+        <!-- Installation Guide (shown when daemon not running) -->
+        <div class="section" id="installSection" style="display: none;">
+            <div class="section-title">📦 Service Manager Setup</div>
+            <div class="install-card">
+                <div class="install-header">
+                    <div class="install-icon">💡</div>
+                    <div>
+                        <h3>Install Service Manager</h3>
+                        <p>For automatic server detection and health monitoring</p>
+                    </div>
+                </div>
+                <div class="install-steps">
+                    <div class="install-step">
+                        <span class="step-number">1</span>
+                        <div class="step-content">
+                            <strong>Download Installer</strong>
+                            <p>Get the latest Windows installer from GitHub Releases</p>
+                            <a href="https://github.com/Skullcandyxxx/HighlightAssist/releases/latest" class="btn btn-primary btn-sm" target="_blank">
+                                📥 Download v2.0.0
+                            </a>
+                        </div>
+                    </div>
+                    <div class="install-step">
+                        <span class="step-number">2</span>
+                        <div class="step-content">
+                            <strong>Run Setup</strong>
+                            <p>Installs service manager with tray icon (non-intrusive)</p>
+                        </div>
+                    </div>
+                    <div class="install-step">
+                        <span class="step-number">3</span>
+                        <div class="step-content">
+                            <strong>Optional: View Logs</strong>
+                            <p>For developers - check service status and debugging</p>
+                            <button class="btn btn-secondary btn-sm" id="openLogsBtn" disabled>
+                                📂 Open Logs Folder
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="install-note">
+                    💡 <strong>Note:</strong> The extension works without the service manager, but you won't have automatic server scanning and bridge auto-recovery.
+                </div>
             </div>
         </div>
     </div>
