feat: Enhanced server detection and unified tray menu
Major Improvements:
- Improved port detection: 0.2s  0.5s timeout, 10  18 ports scanned
- Expanded port coverage: 3000-3003, 4200-4201, 5000-5002, 5173-5175, 8000-8001, 8080-8081, 9000-9001
- Added comprehensive port scan feature: Scan All Ports (3000-9000)
- Unified Servers menu: Combined start/stop functionality in single menu
- Real-time server detection: External and managed servers shown together
- Auto-refresh menu with live timestamp

Server Management:
- Auto-start dev servers: Detects npm/yarn/pnpm, runs in console, polls for ready
- Stop server functionality: Graceful termination with force kill fallback
- Status indicators: [GREEN] running, [YELLOW] starting, [RED] stopped
- Process tracking: Maintains server state in running_servers dict

Menu Organization:
- Section 1 [RUNNING SERVERS]: All detected servers (managed + external)
  - Managed servers: Click to Stop
  - External servers: Click to Open in browser
- Section 2 [START SERVER]: Stopped projects ready to launch
- Section 3 [ACTIONS]: Scan Projects, Scan All Ports, Timestamp

Technical Changes:
- tray_icon.py: Unified _build_servers_menu() with comprehensive scanning
- Added _on_scan_all_ports(): Background comprehensive port scan 3000-9000
- Fixed lambda closures: Function factory pattern for proper variable capture
- Removed emoji encoding issues: Plain text with [STATUS] prefixes
- Dynamic server naming: Matches ports to known projects from project_manager

Bug Fixes:
- Fixed projects submenu callable  Menu object conversion
- Fixed lambda closure bug in menu item loops
- Fixed external server detection (was only showing managed servers)
- Improved server name display format

--- a/popup-v2.html
+++ b/popup-v2.html
@@ -476,6 +476,58 @@
         .install-note strong {
             font-weight: 600;
         }
+
+        /* Modal Styles */
+        .modal-subtitle {
+            font-size: 13px;
+            color: #64748b;
+            margin-bottom: 10px;
+            font-weight: 500;
+        }
+
+        .modal-input {
+            width: 100%;
+            padding: 10px 14px;
+            border: 2px solid #e2e8f0;
+            border-radius: 8px;
+            font-size: 13px;
+            font-family: inherit;
+            transition: all 0.2s ease;
+            margin-top: 6px;
+        }
+
+        .modal-input:focus {
+            outline: none;
+            border-color: #8b5cf6;
+            box-shadow: 0 0 0 3px rgba(139, 92, 246, 0.1);
+        }
+
+        .modal-info {
+            background: linear-gradient(135deg, #dbeafe 0%, #bfdbfe 100%);
+            border: 2px solid #93c5fd;
+            border-radius: 8px;
+            padding: 10px;
+            margin-top: 10px;
+            font-size: 11px;
+            color: #1e40af;
+            line-height: 1.5;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+
+        @keyframes slideUp {
+            from { 
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to { 
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
     </style>
 </head>
 <body>
@@ -539,6 +591,9 @@
             <div class="actions">
                 <button class="btn btn-primary" id="startInspectBtn">
                     🎨 Start Inspect
+                </button>
+                <button class="btn btn-primary" id="startNewServerBtn" style="background: linear-gradient(135deg, #10b981 0%, #059669 100%);">
+                    ✨ Start New Server
                 </button>
                 <button class="btn btn-secondary" id="settingsBtn">
                     ⚙️ Settings
