feat: Restore complete v3.3.0 installer + improvements
 Restored Working Installer Components:
- pyinstaller.spec (with jinja2 bundling)
- web_dashboard.py (dashboard backend)
- tray_icon.py (system tray functionality)
- dashboard/index.html (dashboard UI)
- installer-config.iss (Inno Setup configuration)

 Improved Service Manager:
- Added HAS_DASHBOARD and HAS_TRAY optional import handling
- Dashboard and tray now gracefully degrade if files missing
- Fixed imports with type: ignore comments for optional deps

 VS Code Configuration:
- Suppress linting errors for optional dependencies
- Hide non-release files from explorer
- Disable webhint for inline styles (needed for extensions)

 PowerShell Utilities:
- cleanup.ps1: Port cleanup and process management
- diagnose-ports.ps1: Port diagnostics (24672 variable fixed)
- package-*.ps1: Unused variable warnings fixed

 Security & Compatibility:
- Added rel='noopener noreferrer' to external links
- Added -webkit-backdrop-filter for Safari support
- Updated .gitignore to exclude archive-old/

 Testing:
- Local build tested successfully (23.75 MB executable)
- All services verified: TCP (5054), Bridge (5055), Dashboard (9999)
- Clean startup confirmed in logs

This restores the last known working installer setup from v3.3.0
while adding defensive coding and improved error handling.

--- a/popup-v2.html
+++ b/popup-v2.html
@@ -82,6 +82,7 @@
         .status-pill {
             flex: 1;
             background: rgba(255, 255, 255, 0.15);
+            -webkit-backdrop-filter: blur(10px);
             backdrop-filter: blur(10px);
             padding: 8px 12px;
             border-radius: 8px;
